--- a/Parcial2/ServidorBD/package.json
+++ b/Parcial2/ServidorBD/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "msnodesqlv8": "^4.1.0",
     "mssql": "^10.0.0"
   }
 }
