--- a/Parcial2/ServidorExpress/package.json
+++ b/Parcial2/ServidorExpress/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "express-validator": "^7.0.1",
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
   }
 }
