--- a/Parcial3/Swagger/package.json
+++ b/Parcial3/Swagger/package.json
@@ -5,7 +5,10 @@
     "morgan": "^1.10.0",
     "msnodesqlv8": "^4.1.1",
     "mssql": "^10.0.1",
+    "redoc-express": "^2.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-themes": "^1.2.30",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-ui-themes": "^3.0.1"
   }
 }
