--- a/Parcial3/Swagger/package.json
+++ b/Parcial3/Swagger/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
+    "jest": "^29.7.0",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
